2000-01-08  Max Horn  <max@quendi.de>
	* gameclk.cc/h: fixed parameter types of Game_clock::handle_event

2001-01-08  Christoph Reichenbach  <jameson@linuxgames.com>

	* usecode/conversation.cc: Included alpha_kludges.h
	* audio/xmidi.cc: Moved xmidi.h into non-Alpha block

2000-01-08  Max Horn  <max@quendi.de>
	* exult_constants.h: changed constants to be prefixed by c_
	* exult_constants.h: added some new constants (esp. for those -359 values!)
	* lots-o-files: updated to reflect changes to exult_constants.h
	* removed some dependencies on objs.h (most importantly, from gamewin.h!)
	* objs/flags.h: added, contains item flags
	* objs/objlist.h: added, contains Object_list -> enables us to remove more dependencies
	* audio/Mixer.cc/h: made temp_buffer (from fill_audio_func) a class member and pre-allocate it
	  two reasons for this: 1) more efficient 2) no more crash on MacOS
	
2001-01-08  Tristan Tarrant <nadir@users.sourceforge.net>
	* NEWS: updated
	* audio/midi_drivers/Timidity_binary.cc: tiny useless fixes

2001-01-08  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* lots.of.files: removed AUTOCONFIGURED define
	* lots.of.files: removed #include's
	* Makefile.*: removed unused NO_INTRO define
	* exultmenu.cc/h: moved part of game.cc/h into new files
	* exult_constants.h: added, contains several constants (from objs.h)

2001-01-07  Jeff Freedman  <jeff@amy.nerble.net>

	* Bug fixes:  Cannons now fire, and lightning stops in dungeons.

2001-01-08  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* gamewin.cc/h, usecode/conversation.cc/h: moved part of Game_window
	to a new Conversation class
	* schedule.cc, usecode/ucmachine.cc/h, usecode/intrinsics.cc: 
	changed to use new Conversation class
	* usecode/Makefile.am, Makefile.*: build conversation.o

2001-01-07  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* exult.cc: Get_click ignores modifier keys, and takes screenshots
	* gamewin.cc/h: added Game_window::clear_avatar_choices()